# rustnobel

./: .env  .envrc  Cargo.toml  Dockerfile.app  Dockerfile.db  devcontainer.json  docker-compose.yml  nobeldata.sql  shell.nix
rustnobel/: Cargo.toml  Dockerfile.app  build.sh
rustnobel/.devcontainer/: devcontainer.json
rustnobel/src/: .env  main.rs
rustnobel/src/db/: schema.rs
rustnobel/static/scripts/: barchart.js  map.js  script.js
src/: main.rs  nobeldata.sql
src/db/: models.rs  schema.rs
static/scripts/: barchart.js  map.js  script.js
static/styles/: \  style.css
templates/: index.html
