[package]
name = "rustnobel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.75"
axum = { version = "0.7.2", features = ["macros"] }
bb8 = "0.8.1"
celes = "2.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-diesel = { version = "0.5.0", features = ["sqlite"] }
diesel = { version = "2.1.4", features = ["sqlite", "chrono", "r2d2"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
futures = "0.3.30"
geo = "0.27.0"
http = "1.0.0"
hyper = "1.1.0"
include_dir = "0.7.3"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
